--- a/app/src/main/res/raw/index.html
+++ b/app/src/main/res/raw/index.html
@@ -5,7 +5,7 @@
         <meta
                 name="viewport"
                 content="width=device-width, initial-scale=1.0">
-        <title>我的电视·〇</title>
+        <title>看电视</title>
         <style>
             body {
                 height: 100vh;
@@ -37,7 +37,7 @@
         </style>
     </head>
     <body>
-        <h1>我的电视·〇</h1>
+        <h1>看电视</h1>
         <hr />
         <div class="inline-box">视频源地址，确认后保存：</div>
         <div class="inline-box">
